serviceのボックスのSPレイアウト作成

--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
                       <img class="b-image" src="img/hero_04.svg" alt="" />
                     </div>
                     <div class="b-serviceContents__advantageResult b-boxFlame__line b-boxFlame__line--orange">
-                      <p class="b-serviceContents__boxResult">クライアントに最適なWebサイトを提供</p>
+                      <p class="b-serviceContents__boxResult">
+                        <span class="spbr">クライアントに</span>最適なWebサイトを提供
+                      </p>
                       <figure class="b-serviceContents__boxIcon">
                         <img class="b-image" src="img/service_advantage_03.png" width="110px" height="110px" alt="" />
                       </figure>
@@ -278,7 +280,7 @@
                           誠実さや親切さといった“人の本質的な部分”を最も大切にしており、これまで多くのクライアント様からも「とても丁寧に分かりやすく教えてくださり助かりました」といったお言葉をいただいております。
                         </p>
                       </div>
-                      <figure class="b-serviceContents__boxIcon">
+                      <figure class="b-serviceContents__boxImage">
                         <img class="b-image" src="img/service_support_02.png" width="536px" height="330px" alt="" />
                       </figure>
                     </div>
