スクロールアニメーション実装

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <main class="contents">
         <div class="l-S01 s-hero">
           <div class="l-S02">
-            <div class="l-L01">
+            <div class="l-L01 fadeUpTrigger">
               <div class="l-L02">
                 <p class="b-hero__mainCopy"><span class="br">あなたの課題に</span>適材適所のクリエイターを。</p>
                 <p class="b-hero__subCopy">高品質で低価格なWebサイト制作サービス</p>
@@ -93,7 +93,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 b-aboutContents">
+              <div class="l-L05 b-aboutContents fadeUpTrigger">
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">クライアント</p>
                   <img
@@ -126,7 +126,7 @@
                 <div class="l-L07">
                   <h3 class="b-contents__title">SLashNextができること</h3>
                 </div>
-                <div class="l-L08 b-aboutReception">
+                <div class="l-L08 b-aboutReception fadeUpTrigger">
                   <div class="b-aboutReception__box">
                     <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
                       <img class="b-image" src="img/about_reception_01.png" alt="" />
@@ -168,7 +168,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05">
+              <div class="l-L05 fadeUpTrigger">
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">01</p>
                   <img
@@ -222,7 +222,7 @@
                       >最適なWebサイトを制作
                     </h3>
                   </div>
-                  <div class="l-L09">
+                  <div class="l-L09 fadeUpTrigger">
                     <div class="b-serviceContents__advantage b-boxFlame__line b-boxFlame__line--orange">
                       <h4 class="b-serviceContents__boxTitle">多彩な経歴</h4>
                       <figure class="b-serviceContents__boxIcon">
@@ -269,7 +269,7 @@
                       「わからない」をゼロに
                     </h3>
                   </div>
-                  <div class="l-L12">
+                  <div class="l-L12 fadeUpTrigger">
                     <div class="b-serviceContents__support b-boxFlame__line b-boxFlame__line--orange">
                       <div class="b-serviceContents__supportWrapper">
                         <h4 class="b-serviceContents__boxTitle">丁寧で安心できるサポート</h4>
@@ -297,7 +297,7 @@
                       Webサイトの制作において最もコストのかかるものは人件費です。既に構築されているクリエイターとの信頼関係を元に、安定的な人材の確保や円滑なコミュニケーションなど効率的に人を活かす仕組みを作り上げ、価格を最大限抑えました。
                     </p>
                   </div>
-                  <div class="l-L16">
+                  <div class="l-L16 fadeUpTrigger">
                     <div class="b-serviceContents__lowPrice b-boxFlame__line b-boxFlame__line--orange">
                       <h4 class="b-serviceContents__boxTitle">最適な人材配置</h4>
                       <div class="b-serviceContents__lowPriceWrapper">
@@ -332,7 +332,7 @@
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01"><h2 class="b-difference__mainTitle">他社との価格の違い</h2></div>
-              <div class="l-L02">
+              <div class="l-L02 fadeUpTrigger">
                 <div class="l-L03"><p class="b-difference__callText">例えばこのくらい！</p></div>
                 <div class="l-L04"><h3 class="b-contents__title">過去の案件の参考例</h3></div>
                 <div class="l-L05">
@@ -382,7 +382,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05">
+              <div class="l-L05 fadeUpTrigger">
                 <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">01</p>
                   <img
@@ -437,7 +437,7 @@
                       <p class="b-reasonContents__boxResult">人材の確保にコストがかからない</p>
                     </div>
                   </div>
-                  <div class="l-L12">
+                  <div class="l-L12 fadeUpTrigger">
                     <img class="b-image" src="img/reason_keepstaff.png" alt="常に一定数以上のクリエイターが稼働可能" />
                   </div>
                 </div>
@@ -457,7 +457,7 @@
                       <p class="b-reasonContents__boxResult">制作工数の削減につながる</p>
                     </div>
                   </div>
-                  <div class="l-L12">
+                  <div class="l-L12 fadeUpTrigger">
                     <img
                       class="b-image"
                       src="img/reason_assign.png"
@@ -481,7 +481,7 @@
                       <p class="b-reasonContents__boxResult">共通認識のすり合わせに時間をかける必要がない</p>
                     </div>
                   </div>
-                  <div class="l-L12">
+                  <div class="l-L12 fadeUpTrigger">
                     <img
                       class="b-image"
                       src="img/reason_communication.png"
@@ -511,7 +511,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05">
+              <div class="l-L05 fadeUpTrigger">
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">01</p>
                   <img class="b-guidance__icon b-image" src="img/flow_01.png" width="100px" height="100px" alt="" />
@@ -610,7 +610,7 @@
                         >
                       </div>
                     </div>
-                    <div class="l-L14 b-creatorSLash b-boxFlame__shift b-boxFlame__shift--pink">
+                    <div class="l-L14 b-creatorSLash b-boxFlame__shift b-boxFlame__shift--pink fadeUpTrigger">
                       <img class="b-creatorSLash__boxLogo b-image" src="img/creator_slash_01.png" alt="SLash" />
                       <div class="b-creatorSLash__cardBox">
                         <div class="b-creatorSLash__cardItem blue">
@@ -656,7 +656,7 @@
                         >
                       </div>
                     </div>
-                    <div class="l-L14 b-creatorCranks b-boxFlame__shift b-boxFlame__shift--purple">
+                    <div class="l-L14 b-creatorCranks b-boxFlame__shift b-boxFlame__shift--purple fadeUpTrigger">
                       <img class="b-creatorCranks__boxLogo b-image" src="img/creator_cranks_01.png" alt="Cranks" />
                       <div class="b-creatorCranks__cardBox">
                         <div class="b-creatorCranks__cardItem">
@@ -697,7 +697,7 @@
                   <h2 class="b-heading__title">よくある<span class="emphasis icon icon--yellow">質問</span></h2>
                 </div>
                 <ul class="l-L03">
-                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow fadeUpTrigger">
                     <dl class="b-faqContents__box">
                       <dt class="b-faqContents__boxTitle">SLashNextとはどのようなサービスですか？</dt>
                       <dd class="b-contents__text">
@@ -705,7 +705,7 @@
                       </dd>
                     </dl>
                   </li>
-                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow fadeUpTrigger">
                     <dl class="b-faqContents__box">
                       <dt class="b-faqContents__boxTitle">相場と比べてどのくらい安くなりますか？</dt>
                       <dd class="b-contents__text">
@@ -713,7 +713,7 @@
                       </dd>
                     </dl>
                   </li>
-                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow fadeUpTrigger">
                     <dl class="b-faqContents__box">
                       <dt class="b-faqContents__boxTitle">制作期間はどのくらいですか？</dt>
                       <dd class="b-contents__text">
@@ -721,7 +721,7 @@
                       </dd>
                     </dl>
                   </li>
-                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow fadeUpTrigger">
                     <dl class="b-faqContents__box">
                       <dt class="b-faqContents__boxTitle">
                         制作着手後に追加したい要素が発生した場合は対応していただけますか？
@@ -732,13 +732,13 @@
                       </dd>
                     </dl>
                   </li>
-                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow fadeUpTrigger">
                     <dl class="b-faqContents__box">
                       <dt class="b-faqContents__boxTitle">所属しているクリエイターの人数はどのくらいですか？</dt>
                       <dd class="b-contents__text">2022年11月時点で20人以上のクリエイターが所属しています。</dd>
                     </dl>
                   </li>
-                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow fadeUpTrigger">
                     <dl class="b-faqContents__box">
                       <dt class="b-faqContents__boxTitle">ロゴや印刷物などの依頼は受け付けていますか？</dt>
                       <dd class="b-contents__text">
