--- a/index.html
+++ b/index.html
@@ -821,13 +821,13 @@
               </div>
               <nav class="l-L06">
                 <ul class="m-footerNav__box">
-                  <li class="b-nav__item b-nav__title"><a href="#s-about">SLashNextとは</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="#s-service">サービスの特徴</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="#s-difference">価格の違い</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="#s-season">低価格のワケ</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="#s-flow">納品までの流れ</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="#s-creator">所属クリエイター</a></li>
-                  <li class="b-nav__item b-nav__title"><a href="#s-faq">よくある質問</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-about">SLashNextとは</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-service">サービスの特徴</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-difference">価格の違い</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-season">低価格のワケ</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-flow">納品までの流れ</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-creator">所属クリエイター</a></li>
+                  <li class="b-nav__item b-nav__footerTitle"><a href="#s-faq">よくある質問</a></li>
                 </ul>
               </nav>
             </div>
