faviconのパス修正

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SLashNext|高品質で低価格なWebサイト制作サービス</title>
     <!-- ファビコン -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
     <!-- script --------------------------------------------------------------------------->
