--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>SLashNext|高品質で低価格なWebサイト制作サービス</title>
     <!-- ファビコン -->
     <link rel="icon" href="favicon.ico" />
+    <!-- OGP -->
+    <meta property="og:description" content="クリエイティブ集団が制作を請け負う、高品質・低価格なWebサイト制作サービスです。株式会社CRANKSと幅広い強みを持ったクリエイターのタッグであなたの抱える課題解決に最適なご提案を。">
+    <meta property="og:url" content="#">
+    <meta property="og:site_name" content="SLashNext">
+    <meta property="og:image" content="img/ogp.png">
     <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
     <!-- script --------------------------------------------------------------------------->
