SPレイアウト調整

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <!-- ファビコン -->
     <link rel="icon" href="favicon.ico" />
     <!-- OGP -->
-    <meta property="og:description" content="クリエイティブ集団が制作を請け負う、高品質・低価格なWebサイト制作サービスです。株式会社CRANKSと幅広い強みを持ったクリエイターのタッグであなたの抱える課題解決に最適なご提案を。">
-    <meta property="og:url" content="#">
-    <meta property="og:site_name" content="SLashNext">
-    <meta property="og:image" content="img/ogp.png">
+    <meta
+      property="og:description"
+      content="クリエイティブ集団が制作を請け負う、高品質・低価格なWebサイト制作サービスです。株式会社CRANKSと幅広い強みを持ったクリエイターのタッグであなたの抱える課題解決に最適なご提案を。"
+    />
+    <meta property="og:url" content="#" />
+    <meta property="og:site_name" content="SLashNext" />
+    <meta property="og:image" content="img/ogp.png" />
     <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
     <!-- script --------------------------------------------------------------------------->
@@ -225,7 +228,8 @@
                 <div class="l-L07">
                   <div class="l-L08">
                     <h3 class="b-contents__title">
-                      <span class="br b-serviceContents__subTitle">様々な強みを持ったクリエイターが集結</span
+                      <span class="br b-serviceContents__subTitle"
+                        ><span class="spbr">様々な強みを持った</span>クリエイターが集結</span
                       >最適なWebサイトを制作
                     </h3>
                   </div>
@@ -296,7 +300,9 @@
                 <div class="l-L13">
                   <div class="l-L14">
                     <h3 class="b-contents__title">
-                      <span class="br b-serviceContents__subTitle">制作における見えないコストを削減</span>低価格の実現
+                      <span class="br b-serviceContents__subTitle"
+                        ><span class="spbr">制作における見えない</span>コストを削減</span
+                      >低価格の実現
                     </h3>
                   </div>
                   <div class="l-L15">
@@ -566,7 +572,7 @@
                 </div>
                 <div class="l-L03">
                   <p class="b-heading__text">
-                    <span class="br"
+                    <span class="pcbr"
                       >SLashNextの提供元である株式会社CRANKSが運営する「Webクリエイター育成スクール SLash」には、</span
                     >フリーランスを目指す一定水準以上の人が集まっています。
                   </p>
@@ -780,51 +786,63 @@
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
-                <div class="l-L02"><img src="img/footer_cranks_01.svg" alt="" /></div>
+                <div class="l-L02"><img class="b-image" src="img/footer_cranks_01.svg" alt="" /></div>
                 <div class="l-L03">
                   <dl class="b-footerCompany">
-                    <dt class="b-footerCompany__label">会社名</dt>
-                    <dd class="b-footerCompany__text">
-                      株式会社CRANKS <br /><span class="b-footerCompany__subText">CRANKS CORPORATION</span>
-                    </dd>
-                    <dt class="b-footerCompany__label">設立</dt>
-                    <dd class="b-footerCompany__text">2021年2月</dd>
-                    <dt class="b-footerCompany__label">事業内容</dt>
-                    <dd class="b-footerCompany__text">Web制作事業<br />Webクリエイター育成事業</dd>
-                    <dt class="b-footerCompany__label">住所</dt>
-                    <dd class="b-footerCompany__text">
-                      <span class="b-footerCompany__subText">〒150-0001</span>
-                      <br />
-                      東京都渋谷区神宮前6-23-4 桑野ビル2F
-                    </dd>
-                    <dt class="b-footerCompany__label">代表者</dt>
-                    <dd class="b-footerCompany__text">
-                      <div class="ashizawa">
-                        <span class="b-footerCompany__subText">代表取締役 社長</span>
+                    <div class="b-footerCompany__wrapper">
+                      <dt class="b-footerCompany__label">会社名</dt>
+                      <dd class="b-footerCompany__text">
+                        株式会社CRANKS <br /><span class="b-footerCompany__subText">CRANKS CORPORATION</span>
+                      </dd>
+                    </div>
+                    <div class="b-footerCompany__wrapper">
+                      <dt class="b-footerCompany__label">設立</dt>
+                      <dd class="b-footerCompany__text">2021年2月</dd>
+                    </div>
+                    <div class="b-footerCompany__wrapper">
+                      <dt class="b-footerCompany__label">事業内容</dt>
+                      <dd class="b-footerCompany__text">Web制作事業<br />Webクリエイター育成事業</dd>
+                    </div>
+                    <div class="b-footerCompany__wrapper">
+                      <dt class="b-footerCompany__label">住所</dt>
+                      <dd class="b-footerCompany__text">
+                        <span class="b-footerCompany__subText">〒150-0001</span>
                         <br />
-                        芦沢 哲也 <br />
-                      </div>
-                      <div class="ogino">
-                        <span class="b-footerCompany__subText">代表取締役 副社長</span>
-                        <br />
-                        荻野 裕行
-                      </div>
-                    </dd>
-                    <dt class="b-footerCompany__label">ホームページ</dt>
-                    <dd class="b-footerCompany__text">
-                      <a href="https://cranks.co.jp/" target="_blank" rel="noopener noreferrer"
-                        >https://cranks.co.jp/</a
-                      >
-                    </dd>
+                        東京都渋谷区神宮前6-23-4 桑野ビル2F
+                      </dd>
+                    </div>
+                    <div class="b-footerCompany__wrapper">
+                      <dt class="b-footerCompany__label">代表者</dt>
+                      <dd class="b-footerCompany__text">
+                        <div class="ashizawa">
+                          <span class="b-footerCompany__subText">代表取締役 社長</span>
+                          <br />
+                          芦沢 哲也 <br />
+                        </div>
+                        <div class="ogino">
+                          <span class="b-footerCompany__subText">代表取締役 副社長</span>
+                          <br />
+                          荻野 裕行
+                        </div>
+                      </dd>
+                    </div>
+                    <div class="b-footerCompany__wrapper">
+                      <dt class="b-footerCompany__label">ホームページ</dt>
+                      <dd class="b-footerCompany__text">
+                        <a href="https://cranks.co.jp/" target="_blank" rel="noopener noreferrer"
+                          >https://cranks.co.jp/</a
+                        >
+                      </dd>
+                    </div>
                   </dl>
                 </div>
               </div>
             </div>
             <div class="l-L04">
               <div class="l-L05">
-                <h1 class="b-logo">
+                <div class="b-logo">
                   <a href="index.html">SLashNext</a>
-                </h1>
+                </div>
               </div>
               <nav class="l-L06">
                 <ul class="m-footerNav__box">
