--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 b-aboutContents fadeUpTrigger">
+              <div class="l-L05 b-aboutContents popUpTrigger">
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">クライアント</p>
                   <img
@@ -178,8 +178,8 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 fadeUpTrigger">
-                <div class="b-guidance b-guidance--service">
+              <div class="l-L05">
+                <div class="b-guidance b-guidance--service popUpTrigger">
                   <p class="b-guidance__number flame flame--orange">01</p>
                   <img
                     class="b-guidance__icon b-image"
@@ -193,7 +193,7 @@
                     最適なWebサイトを制作
                   </p>
                 </div>
-                <div class="b-guidance b-guidance--service">
+                <div class="b-guidance b-guidance--service popUpTrigger delay-time01">
                   <p class="b-guidance__number flame flame--orange">02</p>
                   <img
                     class="b-guidance__icon b-image"
@@ -207,7 +207,7 @@
                     「わからない」をゼロに
                   </p>
                 </div>
-                <div class="b-guidance b-guidance--service">
+                <div class="b-guidance b-guidance--service popUpTrigger delay-time02">
                   <p class="b-guidance__number flame flame--orange">03</p>
                   <img
                     class="b-guidance__icon large b-image"
@@ -395,8 +395,8 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 fadeUpTrigger">
-                <div class="b-guidance b-guidance--reason">
+              <div class="l-L05">
+                <div class="b-guidance b-guidance--reason popUpTrigger">
                   <p class="b-guidance__number flame flame--blue">01</p>
                   <img
                     class="b-guidance__icon b-image"
@@ -407,7 +407,7 @@
                   />
                   <p class="b-reasonGuidance__title">安定した人材確保</p>
                 </div>
-                <div class="b-guidance b-guidance--reason">
+                <div class="b-guidance b-guidance--reason popUpTrigger delay-time01">
                   <p class="b-guidance__number flame flame--blue">02</p>
                   <img
                     class="b-guidance__icon b-image"
@@ -418,7 +418,7 @@
                   />
                   <p class="b-reasonGuidance__title">最適な人材配置</p>
                 </div>
-                <div class="b-guidance b-guidance--reason">
+                <div class="b-guidance b-guidance--reason popUpTrigger delay-time02">
                   <p class="b-guidance__number flame flame--blue">03</p>
                   <img
                     class="b-guidance__icon small b-image"
@@ -524,7 +524,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 fadeUpTrigger">
+              <div class="l-L05 popUpTrigger">
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">01</p>
                   <img class="b-guidance__icon b-image" src="img/flow_01.png" width="100px" height="100px" alt="" />
