--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 b-aboutContents popUpTrigger">
+              <div class="l-L05 b-aboutContents">
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">クライアント</p>
                   <img
-                    class="b-aboutContents__boxIcon b-image"
+                    class="b-aboutContents__boxIcon b-image popUpTrigger"
                     src="img/about_contents_01.png"
                     width="175px"
                     height="175px"
@@ -121,7 +121,7 @@
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">強みを持ったクリエイター</p>
                   <img
-                    class="b-aboutContents__boxIcon small b-image"
+                    class="b-aboutContents__boxIcon small b-image popUpTrigger"
                     src="img/about_contents_03.png"
                     width="175px"
                     height="175px"
@@ -179,10 +179,10 @@
 
             <div class="l-L04">
               <div class="l-L05">
-                <div class="b-guidance b-guidance--service popUpTrigger">
+                <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">01</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon b-image popUpTrigger"
                     src="img/service_guidance_01.png"
                     width="150px"
                     height="150px"
@@ -193,10 +193,10 @@
                     最適なWebサイトを制作
                   </p>
                 </div>
-                <div class="b-guidance b-guidance--service popUpTrigger delay-time01">
+                <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">02</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon b-image popUpTrigger delay-time01"
                     src="img/service_guidance_02.png"
                     width="150px"
                     height="150px"
@@ -207,10 +207,10 @@
                     「わからない」をゼロに
                   </p>
                 </div>
-                <div class="b-guidance b-guidance--service popUpTrigger delay-time02">
+                <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">03</p>
                   <img
-                    class="b-guidance__icon large b-image"
+                    class="b-guidance__icon large b-image popUpTrigger delay-time02"
                     src="img/service_guidance_03.png"
                     width="150px"
                     height="150px"
@@ -396,10 +396,10 @@
 
             <div class="l-L04">
               <div class="l-L05">
-                <div class="b-guidance b-guidance--reason popUpTrigger">
+                <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">01</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon b-image popUpTrigger"
                     src="img/about_contents_03.png"
                     width="180px"
                     height="180px"
@@ -407,10 +407,10 @@
                   />
                   <p class="b-reasonGuidance__title">安定した人材確保</p>
                 </div>
-                <div class="b-guidance b-guidance--reason popUpTrigger delay-time01">
+                <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">02</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon b-image popUpTrigger delay-time01"
                     src="img/reason_guidance_01.png"
                     width="180px"
                     height="180px"
@@ -418,10 +418,10 @@
                   />
                   <p class="b-reasonGuidance__title">最適な人材配置</p>
                 </div>
-                <div class="b-guidance b-guidance--reason popUpTrigger delay-time02">
+                <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">03</p>
                   <img
-                    class="b-guidance__icon small b-image"
+                    class="b-guidance__icon small b-image popUpTrigger delay-time02"
                     src="img/reason_guidance_02.png"
                     width="180px"
                     height="180px"
@@ -524,31 +524,55 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 popUpTrigger">
+              <div class="l-L05">
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">01</p>
-                  <img class="b-guidance__icon b-image" src="img/flow_01.png" width="100px" height="100px" alt="" />
+                  <img
+                    class="b-guidance__icon b-image popUpTrigger"
+                    src="img/flow_01.png"
+                    width="100px"
+                    height="100px"
+                    alt=""
+                  />
                   <p class="b-flowContents__title">ご依頼</p>
                 </div>
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">02</p>
-                  <img class="b-guidance__icon b-image" src="img/flow_02.png" width="100px" height="100px" alt="" />
+                  <img
+                    class="b-guidance__icon b-image popUpTrigger"
+                    src="img/flow_02.png"
+                    width="100px"
+                    height="100px"
+                    alt=""
+                  />
                   <p class="b-flowContents__title">打ち合わせ</p>
                 </div>
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">03</p>
-                  <img class="b-guidance__icon b-image" src="img/flow_03.png" width="100px" height="100px" alt="" />
+                  <img
+                    class="b-guidance__icon b-image popUpTrigger"
+                    src="img/flow_03.png"
+                    width="100px"
+                    height="100px"
+                    alt=""
+                  />
                   <p class="b-flowContents__title">お見積り</p>
                 </div>
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">04</p>
-                  <img class="b-guidance__icon b-image" src="img/flow_04.png" width="100px" height="100px" alt="" />
+                  <img
+                    class="b-guidance__icon b-image popUpTrigger"
+                    src="img/flow_04.png"
+                    width="100px"
+                    height="100px"
+                    alt=""
+                  />
                   <p class="b-flowContents__title">制作</p>
                 </div>
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">05</p>
                   <img
-                    class="b-guidance__icon b-image"
+                    class="b-guidance__icon b-image popUpTrigger"
                     src="img/service_advantage_03.png"
                     width="100px"
                     height="100px"
