sp カードDropShadowの位置調整

--- a/index.html
+++ b/index.html
@@ -364,8 +364,10 @@
                     <span class="br">スマホ</span>対応
                   </p>
                 </div>
-                <div class="l-L07 b-boxFlame__shift b-boxFlame__shift--blue">
-                  <img class="b-image" src="img/difference.png" alt="" />
+                <div class="l-L07">
+                  <div class="b-boxFlame__shift b-boxFlame__shift--blue">
+                    <img class="b-image" src="img/difference.png" alt="" />
+                  </div>
                 </div>
                 <div class="l-L08">
                   <p class="b-difference__subText b-boxFlame__line b-boxFlame__line--blue">
@@ -623,21 +625,23 @@
                         >
                       </div>
                     </div>
-                    <div class="l-L14 b-creatorSLash b-boxFlame__shift b-boxFlame__shift--pink fadeUpTrigger">
-                      <img class="b-creatorSLash__boxLogo b-image" src="img/creator_slash_01.png" alt="SLash" />
-                      <div class="b-creatorSLash__cardBox">
-                        <div class="b-creatorSLash__cardItem blue">
-                          <h4 class="b-creatorSLash__boxTitle blue"><span>ミッション</span></h4>
-                          <p class="b-creatorSLash__boxText">
-                            <span class="br">自らの思考や行動によって</span><span class="br">新しい価値を想像し</span
-                            ><span class="br">自主的かつ継続的な経済活動を</span> 行えるクリエイターを育成する
-                          </p>
-                        </div>
-                        <div class="b-creatorSLash__cardItem gray">
-                          <h4 class="b-creatorSLash__boxTitle gray"><span>理念</span></h4>
-                          <p class="b-creatorSLash__boxText">
-                            「知識」よりも「思考」を<br />「技術」よりも「経験」を<br />「やり方」よりも「あり方」を
-                          </p>
+                    <div class="l-L14">
+                      <div class="b-creatorSLash b-boxFlame__shift b-boxFlame__shift--pink fadeUpTrigger">
+                        <img class="b-creatorSLash__boxLogo b-image" src="img/creator_slash_01.png" alt="SLash" />
+                        <div class="b-creatorSLash__cardBox">
+                          <div class="b-creatorSLash__cardItem blue">
+                            <h4 class="b-creatorSLash__boxTitle blue"><span>ミッション</span></h4>
+                            <p class="b-creatorSLash__boxText">
+                              <span class="br">自らの思考や行動によって</span><span class="br">新しい価値を想像し</span
+                              ><span class="br">自主的かつ継続的な経済活動を</span> 行えるクリエイターを育成する
+                            </p>
+                          </div>
+                          <div class="b-creatorSLash__cardItem gray">
+                            <h4 class="b-creatorSLash__boxTitle gray"><span>理念</span></h4>
+                            <p class="b-creatorSLash__boxText">
+                              「知識」よりも「思考」を<br />「技術」よりも「経験」を<br />「やり方」よりも「あり方」を
+                            </p>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -669,29 +673,31 @@
                         >
                       </div>
                     </div>
-                    <div class="l-L14 b-creatorCranks b-boxFlame__shift b-boxFlame__shift--purple fadeUpTrigger">
-                      <img class="b-creatorCranks__boxLogo b-image" src="img/creator_cranks_01.png" alt="Cranks" />
-                      <div class="b-creatorCranks__cardBox">
-                        <div class="b-creatorCranks__cardItem">
-                          <img class="b-creatorCranks__boxImage b-image" src="img/creator_cranks_02.png" alt="" />
-                          <dl class="b-creatorCranks__box">
-                            <dt class="b-creatorCranks__boxName--jp">
-                              芦沢 哲也<br /><span class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</span>
-                            </dt>
-                            <dd class="b-creatorCranks__boxStatus">代表取締役社長</dd>
-                            <dd class="b-creatorCranks__boxJob">Webクリエイター/プログラマー</dd>
-                          </dl>
-                        </div>
-                        <div class="b-creatorCranks__cardItem">
-                          <img class="b-creatorCranks__boxImage b-image" src="img/creator_cranks_03.png" alt="" />
-                          <dl class="b-creatorCranks__box">
-                            <dt class="b-creatorCranks__boxName--jp">
-                              荻野裕行<br />
-                              <span class="b-creatorCranks__boxName--en">Ogino Hiroyuki</span>
-                            </dt>
-                            <dd class="b-creatorCranks__boxStatus">代表取締役副社長</dd>
-                            <dd class="b-creatorCranks__boxJob">Webクリエイター/UIデザイナー</dd>
-                          </dl>
+                    <div class="l-L14">
+                      <div class="b-creatorCranks b-boxFlame__shift b-boxFlame__shift--purple fadeUpTrigger">
+                        <img class="b-creatorCranks__boxLogo b-image" src="img/creator_cranks_01.png" alt="Cranks" />
+                        <div class="b-creatorCranks__cardBox">
+                          <div class="b-creatorCranks__cardItem">
+                            <img class="b-creatorCranks__boxImage b-image" src="img/creator_cranks_02.png" alt="" />
+                            <dl class="b-creatorCranks__box">
+                              <dt class="b-creatorCranks__boxName--jp">
+                                芦沢 哲也<br /><span class="b-creatorCranks__boxName--en">Ashizawa Tetsuya</span>
+                              </dt>
+                              <dd class="b-creatorCranks__boxStatus">代表取締役社長</dd>
+                              <dd class="b-creatorCranks__boxJob">Webクリエイター/プログラマー</dd>
+                            </dl>
+                          </div>
+                          <div class="b-creatorCranks__cardItem">
+                            <img class="b-creatorCranks__boxImage b-image" src="img/creator_cranks_03.png" alt="" />
+                            <dl class="b-creatorCranks__box">
+                              <dt class="b-creatorCranks__boxName--jp">
+                                荻野裕行<br />
+                                <span class="b-creatorCranks__boxName--en">Ogino Hiroyuki</span>
+                              </dt>
+                              <dd class="b-creatorCranks__boxStatus">代表取締役副社長</dd>
+                              <dd class="b-creatorCranks__boxJob">Webクリエイター/UIデザイナー</dd>
+                            </dl>
+                          </div>
                         </div>
                       </div>
                     </div>
