帯カードのアイコンとフォント配置調整＆特徴03カード内アイコンの配置調整

--- a/index.html
+++ b/index.html
@@ -188,10 +188,12 @@
                     height="150px"
                     alt=""
                   />
-                  <p class="b-serviceGuidance__mainTitle">
-                    <span class="br b-serviceGuidance__subTitle">様々なクリエイターが集結</span>
-                    最適なWebサイトを制作
-                  </p>
+                  <div class="b-guidance__title">
+                    <p class="b-serviceGuidance__mainTitle">
+                      <span class="br b-serviceGuidance__subTitle">様々なクリエイターが集結</span>
+                      最適なWebサイトを制作
+                    </p>
+                  </div>
                 </div>
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">02</p>
@@ -202,10 +204,12 @@
                     height="150px"
                     alt=""
                   />
-                  <p class="b-serviceGuidance__mainTitle">
-                    <span class="br b-serviceGuidance__subTitle">細やかな対応で不安感を払拭</span>
-                    「わからない」をゼロに
-                  </p>
+                  <div class="b-guidance__title">
+                    <p class="b-serviceGuidance__mainTitle">
+                      <span class="br b-serviceGuidance__subTitle">細やかな対応で不安感を払拭</span>
+                      「わからない」をゼロに
+                    </p>
+                  </div>
                 </div>
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">03</p>
@@ -216,10 +220,12 @@
                     height="150px"
                     alt=""
                   />
-                  <p class="b-serviceGuidance__mainTitle">
-                    <span class="br b-serviceGuidance__subTitle">制作における見えないコストを削減</span>
-                    低価格の実現
-                  </p>
+                  <div class="b-guidance__title">
+                    <p class="b-serviceGuidance__mainTitle">
+                      <span class="br b-serviceGuidance__subTitle">制作における見えないコストを削減</span>
+                      低価格の実現
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -407,7 +413,9 @@
                     height="180px"
                     alt=""
                   />
-                  <p class="b-reasonGuidance__title">安定した人材確保</p>
+                  <div class="b-guidance__title">
+                    <p class="b-reasonGuidance__title">安定した人材確保</p>
+                  </div>
                 </div>
                 <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">02</p>
@@ -418,7 +426,9 @@
                     height="180px"
                     alt=""
                   />
-                  <p class="b-reasonGuidance__title">最適な人材配置</p>
+                  <div class="b-guidance__title">
+                    <p class="b-reasonGuidance__title">最適な人材配置</p>
+                  </div>
                 </div>
                 <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">03</p>
@@ -429,7 +439,9 @@
                     height="180px"
                     alt=""
                   />
-                  <p class="b-reasonGuidance__title"><span class="br">コミュニケーション</span>コストの削減</p>
+                  <div class="b-guidance__title">
+                    <p class="b-reasonGuidance__title"><span class="br">コミュニケーション</span>コストの削減</p>
+                  </div>
                 </div>
               </div>
             </div>
