sp−クリエイタータイトル改行

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
               <div class="l-L01">
                 <div class="l-L02">
                   <h2 class="b-heading__title">
-                    <span class="emphasis icon icon--purple">所属クリエイター</span>について
+                    <span class="emphasis icon icon--purple">所属クリエイター</span><br>について
                   </h2>
                 </div>
                 <div class="l-L03">
